--- a/styles/search_carousel.css
+++ b/styles/search_carousel.css
@@ -126,7 +126,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: center;
+    width: 100%;
     justify-content: center;
     font-size: 0.8em;
   }
@@ -163,9 +163,11 @@
   flex-direction:column; 
   margin: 0; 
   padding-bottom: 10px;
+  transition: all 0.38s;
 }
 
 #filter-container{
+  display: flex;
   padding-bottom: 10px;
   transition: all 0.38s;
 }
